error on transaction

--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "cpf-cnpj-validator": "^1.0.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "libphonenumber-js": "^1.10.30",
     "mongoose": "^7.2.0",
     "yup": "^1.1.1"
   },
